# SmartGlass

./: .gitignore  .gitmodules  2022.05.19_imu_logic.drawio  README.md
docs/: .gitignore  Gemfile  _config.yml  category-archive.md  index.markdown
docs/_data/: navigation.yml  team.yml
docs/_includes/: head.html
docs/_posts/: 2022-07-18-project-proposal.md  2022-07-18-quick-start.md
docs/_posts/dive-down/: 2022-07-18-3d.md  2022-07-18-firmware.md  2022-07-18-hardware.md  2022-07-18-software.md
docs/_sass/: custom.scss  minimal-mistakes.scss
docs/assets/3d/: 3D-Design.f3d
docs/assets/favicons/: browserconfig.xml  site.webmanifest
documentation/: Documentation_Android.docx  Firmware_Rapport.docx
src/: local.properties
src/Android_App/: local.properties  settings.gradle
src/Android_App/app/: build.gradle
src/Demo-master/: build.gradle
src/Demo-master/app/: build.gradle
src/SmartGlassMaps/: settings.gradle
src/SmartGlassMaps/app/: build.gradle
src/app/: build.gradle
src/firmware/: firmware.ino  glasses_constants.h  glasses_display.h
src/firmware/ble_test_jig/: BLEHandler.cpp  BLEHandler.h  TaskManager.cpp  TaskManager.h  ble_test_jig.ino  callbacks.h  constants.h  utils.cpp  utils.h
src/firmware/esp_idf_glasses/main/: CMakeLists.txt  constants.h  glasses_ble_callbacks.h  glasses_constants.h  glasses_display.cpp  glasses_display.h  glasses_globals_manager.cpp  glasses_globals_manager.h  glasses_location.cpp  glasses_location.h  glasses_toplevel_tasks.cpp  glasses_toplevel_tasks.h  glasses_types.h  glasses_utils.cpp  glasses_utils.h  main.cpp  utils.cpp  utils.h
src/firmware/esp_idf_glasses/main/BLE/: BLEHandler.cpp  BLEHandler.h
src/firmware/esp_idf_glasses/main/BLE/callbacks/: callbacks.h
src/firmware/esp_idf_glasses/main/Display/: Container.cpp  Container.h  Content.cpp  Content.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  Displayable.h
src/firmware/esp_idf_glasses/main/Display/Objects/Immutable/: BatteryBar.h  BatteryFrame.h  Bell.h  Header.cpp  Header.h  HeaderOutline.h  LeftArrow.h  NavigationContainer.cpp  NavigationContainer.h  RawText.cpp  RawText.h  RightArrow.h  StraightArrow.h
src/firmware/esp_idf_glasses/main/Display/Objects/Immutable/Logos/: Logos.cpp  Logos.h
src/firmware/esp_idf_glasses/main/Display/Objects/Mutable/: Arrow.cpp  Arrow.h  BLEIcon.cpp  BLEIcon.h  Battery.cpp  Battery.h  NotificationContainer.cpp  NotificationContainer.h  Text.cpp  Text.h
src/firmware/esp_idf_glasses/main/Display/fonts/: font.cpp  font.h  font_8x8ASCII.h
src/firmware/esp_idf_glasses/main/Globals/: DeviceManager.cpp  DeviceManager.h  GlobalsManager.cpp  GlobalsManager.h  TaskManager.cpp  TaskManager.h
src/firmware/esp_idf_glasses/main/Sensors/: Device.h  GenericTypes.h
src/firmware/esp_idf_glasses/main/Sensors/GNSS/: GNSS.cpp  GNSS.h  GNSSManager.cpp  GNSSManager.h
src/firmware/esp_idf_glasses/main/Sensors/IMU/: IMUManager.cpp  IMUManager.h  IMUstatemachine.cpp  IMUstatemachine.h
src/firmware/esp_idf_glasses/main/Sensors/Timer/: Timers.cpp  Timers.h
src/firmware/esp_idf_glasses/main/uOS/: Notification.h  uOS.cpp  uOS.h
src/firmware/esp_idf_glasses/main/uOS/Applications/: Application.cpp  Application.h  ApplicationContainer.cpp  ApplicationContainer.h  IdleApp.cpp  IdleApp.h  Navigation.h
(+70 files in other folders)
